crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__basictext__oneline.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/basictext/oneline
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Line.\n" [Done]
outcome: Done
